--- a/i am nobody/Birthday_Letter/Letter.css
+++ b/i am nobody/Birthday_Letter/Letter.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: rgb(224, 220, 220);
     margin: 0;
     overflow: hidden; /* Prevent scrolling */
     font-family: "Dancing Script", serif;
@@ -7,6 +7,7 @@ body {
 }
 
 .container {
+    overflow-x: auto;
     background-color: rgb(224, 220, 220);
     height: 100vh;
     justify-content: center;
