--- a/i am nobody/Flowers/flowers.css
+++ b/i am nobody/Flowers/flowers.css
@@ -16,7 +16,7 @@ body {
   justify-content: center;
   min-height: 100vh;
   background-color: var(--dark-color);
-  overflow: hidden;
+  overflow: auto;
   perspective: 1000px;
 }
 
