--- a/i am nobody/Birthday_Letter/Letter.css
+++ b/i am nobody/Birthday_Letter/Letter.css
@@ -1,7 +1,7 @@
 body {
     background-color: rgb(224, 220, 220);
     margin: 0;
-    overflow: hidden; /* Prevent scrolling */
+    overflow: auto; /* Prevent scrolling */
     font-family: "Dancing Script", serif;
     font-size: 20px;
 }
