--- a/i am nobody/open_me❤.css
+++ b/i am nobody/open_me❤.css
@@ -7,8 +7,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    
-    height: 100%;
+    overflow: hidden;
+    height: 100vh;
 }
 .name {
         margin: 0;
