--- a/i am nobody/open_me❤.css
+++ b/i am nobody/open_me❤.css
@@ -7,7 +7,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    margin-top: 500px;
+    margin-left: 365px;
     height: 100vh;
 }
 .name {
