--- a/i am nobody/open_me❤.css
+++ b/i am nobody/open_me❤.css
@@ -1,249 +1,8 @@
-body {
+body, html {
     background-color: black;
-}
-
-.container {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 500px;
-    margin-left: 365px;
-    height: 100vh;
-}
-.name {
-        margin: 0;
-        padding: 0;
-        font-family: Arial;
-        color: #111;
-        font-size: 30px; 
-        margin-top: 75px;
-        background-color: black;
-        animation: animate 3s 5s ease-in 50;
-        border: none;
-        position: relative;
-    }
-    
-    .button1,.button2 {
-        
-        background: pink;
-        display: inline-block;
-        border-radius: 3px;
-        padding: 10px;
-        color: red;
-        transition: 0.3s;
-        cursor: pointer;
-    }
-
-    .button1 {
-        margin-right: 150px;
-    }
-    
-    .button2 {
-        margin-left: 150px;
-    }
-
-    .button1:hover,.button2:hover {
-        color: pink;
-        background: red;
-        
-    }
-
-    .button1:active, .button2:active {
-        opacity: 0.7;
-    }
-
-    @keyframes animate {
-        0%,100%
-         {
-            color: white;
-            filter: blur(2px);
-            text-shadow: 0 0 10px #00b3ff,
-                        0 0 20px #00b3ff,
-                        0 0 40px #00b3ff,
-                        0 0 80px #00b3ff,
-                        0 0 120px #00b3ff;
-            
-
-        }
-
-        5%, 95%{
-            color: #111;
-            filter: blur(0px);
-            box-shadow: none;
-        }
-
-        
-    }
-    
-    @keyframes combine {
-        0% {
-            letter-spacing: 100px;
-            color: white;
-            
-        }
-
-        30% {
-            
-        }
-
-        100%{
-            letter-spacing: 5px;
-            color: #111;
-        }
-    }
-
-    @keyframes shift{
-        0% {
-            
-        }
-
-        100% {
-            transform: translateY(-130px); 
-        }
-        
-    }
-
-    @keyframes opacityy {
-        50% {
-            opacity: 0.5;
-        }
-
-        100%{
-            opacity: 1;
-        }
-    }
-
-    @keyframes fade {
-        50% {
-            opacity: 0.5;
-        }
-
-        100% {
-            opacity: 0;
-        }
-    }
-
-    @keyframes vibrate {
-
-        0% {
-            opacity: 1;
-        }
-        
-        50% {
-            opacity: 0.3;
-            transform: scale(0.3, 0.3);
-        }
-
-        100% {
-            opacity: 1;
-        }
-
-
-    }
-
-
-    @keyframes blur {
-        50% {
-            
-            opacity: 0.3;
-        }
-    }
-
-    @keyframes slidein {
-        from{
-            transform: translateX(1000px)
-        }
-    }
-
-#cake {
-    display: block;
-    position: relative;
-    margin: -10em auto 0 auto;
-}
-.velas {
-    background: #ffffff;
-    border-radius: 10px;
-    position: absolute;
-    top: 228px;
-    left: 50%;
-    margin-left: -2.4px;
-    margin-top: -8.33333333px;
-    width: 5px;
-    height: 35px;
-    transform: translateY(-300px);
-    backface-visibility: hidden;
-    animation: in 500ms 6s ease-out forwards;
-    }
-    .velas:after,
-    .velas:before {
-    background: rgba(255, 0, 0, 0.4);
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2.22222222px;
-    }
-    .velas:after {
-    top: 25%;
-    left: 0;
-    }
-    .velas:before {
-    top: 45%;
-    left: 0;
-    }
-
-    /* ============================================== Fire
-    */
-
-    .fuego {
-    border-radius: 100%;
-    position: absolute;
-    top: -20px;
-    left: 50%;
-    margin-left: -2.6px;
-    width: 6.66666667px;
-    height: 18px;
-    }
-    .fuego:nth-child(1) {
-    animation: fuego 2s 6.5s infinite;
-    }
-    .fuego:nth-child(2) {
-    animation: fuego 1.5s 6.5s infinite;
-    }
-    .fuego:nth-child(3) {
-    animation: fuego 1s 6.5s infinite;
-    }
-    .fuego:nth-child(4) {
-    animation: fuego 0.5s 6.5s infinite;
-    }
-    .fuego:nth-child(5) {
-    animation: fuego 0.2s 6.5s infinite;
-    }
-
-    /* ============================================== Animation Fire
-    */
-
-    @keyframes fuego {
-    0%, 100% {
-        background: rgba(254, 248, 97, 0.5);
-        box-shadow: 0 0 40px 10px rgba(248, 233, 209, 0.2);
-        transform: translateY(0) scale(1);
-    }
-    50% {
-        background: rgba(255, 50, 0, 0.1);
-        box-shadow: 0 0 40px 20px rgba(248, 233, 209, 0.2);
-        transform: translateY(-20px) scale(0);
-    }
-    }
-
-    @keyframes in {
-    to {
-        transform: translateY(0);
-    }
-    }
-
-    body {
-    background-color: black;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 .container {
@@ -487,7 +246,9 @@ body {
 
     @media (max-width: 768px) {
         .container {
-            margin-top: 200px;
+            position: relative;
+            margin-top: 50px;
+            margin-bottom: 50px;
             margin-left: 0;
             flex-direction: column;
         }
@@ -507,19 +268,6 @@ body {
             margin-bottom: 10px;
         }
     }
-
-    .text {
-    color: #fff;
-    font-family: 'Lobster', cursive;
-    font-weight: 300;
-    font-style:italic;
-    text-align: center;
-    letter-spacing: 1px;
-    text-transform: capitalize;
-    line-height: 0.8;
-    }
-    h1 {
-        font-size: 2em;}
 
     .text {
     color: #fff;
