--- a/i am nobody/Birthday_Letter/Letter.css
+++ b/i am nobody/Birthday_Letter/Letter.css
@@ -1,14 +1,15 @@
 body {
     background-color: rgb(224, 220, 220);
     margin: 0;
-    overflow: auto; /* Prevent scrolling */
     font-family: "Dancing Script", serif;
     font-size: 20px;
+    overflow: hidden;
 }
 
 .container {
     background-color: rgb(224, 220, 220);
     height: 100vh;
+    width: 100vw;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -124,5 +125,54 @@ body {
 @keyframes appear {
     to {
         opacity: 1;
+    }
+}
+
+@media (max-width: 768px) {
+    .cover-page, .content {
+        height: 300px;
+        width: 250px;
+        box-shadow: 0px 3px 3px gray;
+    }
+
+    .open, .close {
+        margin-top: 282px;
+        margin-left: 295px;
+
+    }
+
+    .gif {
+        margin-bottom: 50px;
+        width: 150px;
+    }
+
+    .message {
+        font-size: 10px;
+        padding: 10px;
+        text-align: center;
+    }
+
+    .pic {
+        position: absolute;
+        height: 150px;
+        border-width: 10px;
+        background: white;
+        transform: rotateY(180deg);
+    }
+
+    .from {
+        margin-top: 250px;
+        font-size: 18px;
+    }
+
+    .to {
+        margin-top: 272px;
+        margin-right: 95px;
+        font-size: 16px;
+    }
+
+    .by {
+        margin-top: 225px;
+        font-size: 18px;
     }
 }
