--- a/i am nobody/Flowers/flowers.css
+++ b/i am nobody/Flowers/flowers.css
@@ -140,8 +140,8 @@ body {
   width: 8vmin;
   height: 11vmin;
   border-radius: 51% 49% 47% 53%/44% 45% 55% 69%;
-  background-color: #65e6cc;
-  background-image: linear-gradient(to top, #40bbab, #a7ffee);
+  background-color: #ff6fa5;
+  background-image: linear-gradient(to top, #ff3f8e, #ffc1da);
   transform-origin: bottom center;
   opacity: 0.9;
   box-shadow: inset 0 0 2vmin rgba(255, 255, 255, 0.5);
@@ -161,7 +161,7 @@ body {
   transform-origin: bottom left;
   border-radius: 4vmin 10vmin 4vmin 4vmin;
   transform: translate(0%, 18%) rotateX(70deg) rotate(-43deg);
-  background-image: linear-gradient(to top, #39c6d6, #a7ffee);
+  background-image: linear-gradient(to top, #ff4f94, #ffd6e8);
   z-index: 1;
   opacity: 0.8;
 }
@@ -984,4 +984,5 @@ mask-image: linear-gradient(to top, transparent 40%, #079097 80%) !important;
 .not-loaded * {
   animation-play-state: paused !important;
 }
+
 
