Adjust styles for cover and content sections
Updated dimensions of cover and content sections for responsiveness.

--- a/i am nobody/Birthday_Letter/Letter.css
+++ b/i am nobody/Birthday_Letter/Letter.css
@@ -20,8 +20,10 @@ body {
     position: absolute;
     background-color: pink;
     box-shadow: 0px 5px 5px gray;
-    height: 500px;
-    width: 400px;
+    width: 40vw;
+    height: 70vh;
+    max-width: 400px;
+    max-height: 500px;
     justify-content: center;
     align-items: top;
     display: flex;
@@ -33,8 +35,11 @@ body {
     position: absolute;
     background: pink;
     box-shadow: 5px 5px 5px gray;
-    height: 500px;
-    width: 400px;
+    width: 40vw;
+    height: 70vh;
+    max-width: 400px;
+    max-height: 500px;
+
     justify-content: center;
     align-items: center;
     display: flex;
